--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "node dist/index.js",
     "start:dev": "cross-env PORT=2800 DEBUG=W8E* nodemon dist/index.js",
     "build": "tsc -w",
-    "test": "jest --watchAll --coverage",
+    "test": "jest",
+    "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests",
+    "prepare": "husky install",
+    "test:f": "jest --watchAll --coverage",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "build:render": "tsc",
     "api": "json-server --watch ./api/db.json"
   },
@@ -23,6 +27,7 @@
     "@types/cors": "^2.8.16",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
@@ -34,6 +39,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "nodemon": "^3.0.1",
@@ -43,12 +49,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
+    "commander": "^11.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validation": "^4.1.0",
+    "inquirer": "^9.2.12",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
