--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,7 @@
-PASSWORD_DB=<db password>
+PASSWD_DB=<db passwrd>
 USER_DB=<db user>
-DB_NAME=<db name>
-DB_CLUSTER=<db cluster>
 JWT_SECRET=<secret for JWT>
-CLOUDINARY_URL=<cloudinary url>
+CLOUDINARY_SECRET=<cloudinary secret>
+
+DB_CLUSTER=<db cluster>
+DB_NAME=<db name>
