Add test auth.ts 100% and token.payload.ts

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,6 +17,7 @@ sonar.coverage.exclusions=**/*.test.*, **/*.spec.*, **/*.ts
 coveragePathIgnorePatterns: 
   src/controllers/controller.ts,
   src/repos/users/users.mongo.model.ts,
+  src/repos/cares/cares.mongo.model.ts,
   src/repos/repo.ts,
   src/app.ts,
   src/index.ts,
