--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "start": "node dist/index.js",
     "start:dev": "cross-env PORT=2700 DEBUG=W8E* nodemon dist/index.js",
     "build": "tsc -w",
-    "test": "jest",
+    "test": "jest --watchAll --coverage",
     "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests",
     "prepare": "husky install",
-    "test:f": "jest --watchAll --coverage",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "build:render": "tsc",
     "api": "json-server --watch ./api/db.json"
