--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "max-params": "off",
-    "eslint-comments/no-unused-disable": "off"
+    "eslint-comments/no-unused-disable": "off",
+    "capitalized-comments": "off"
   }
 }
