--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.organization=isdi-coders-2023
 #sonar.sourceEncoding=UTF-8
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.*, **/*.spec.*, **/*.ts
+sonar.coverage.exclusions=**/*.test.*, **/*.spec.*
 coveragePathIgnorePatterns: 
   src/controllers/controller.ts,
   src/repos/users/users.mongo.model.ts,
