--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,13 +13,12 @@ sonar.organization=isdi-coders-2023
 #sonar.sourceEncoding=UTF-8
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.*, **/*.spec.*
-coveragePathIgnorePatterns: 
-  src/controllers/controller.ts,
-  src/repos/users/users.mongo.model.ts,
+sonar.coverage.exclusions=**/*.test.*, **/*.spec.*, src/controllers/controller.ts, src/repos/users/users.mongo.model.ts,
   src/repos/cares/cares.mongo.model.ts,
   src/repos/repo.ts,
   src/app.ts,
   src/index.ts,
-  src/routers/users.router.ts
+  src/routers/users.router.ts,
   src/services/media.files.ts
+
+ 
