--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,6 +13,6 @@ sonar.organization=isdi-coders-2023
 #sonar.sourceEncoding=UTF-8
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.*, **/*.spec.*, **/*.model.*, src/controllers/controller.ts, src/repos/users/users.mongo.model.ts, src/repos/cares/cares.mongo.model.ts, src/repos/repo.ts, src/app.ts, src/index.ts, src/routers/users.router.ts, src/services/media.files.ts
+sonar.coverage.exclusions=**/*.test.*, **/*.spec.*, **/*.model.*, src/controllers/controller.ts, src/repos/users/users.mongo.model.ts, src/repos/cares/cares.mongo.model.ts, src/repos/repo.ts, src/app.ts, src/index.ts, src/routers/users.router.ts, src/services/media.files.ts, src/routers/cares.routes.ts, src/routers/users.routes.ts
 
  
